Fixed icon position and hamburger menu wrap size.

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -220,11 +220,12 @@
 .hamburger {
     /*top:50%;*/
     /*left:10%;*/
+    top: 16px;
     width: 50px;
     height: 6px;
     background: var(--main-color);
     color: #029491;
-    /*position: absolute;*/
+    position: absolute;
     /*box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);*/
     transition: 0.5s;
 }
@@ -239,10 +240,10 @@
 
 .icon {
     position: absolute;
-    /*top: 30%;*/
+    top: 30%;
     left: 85%;
-    width: 30px;
-    height: 5px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
 }
 
